Improve looks and feels in step three

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-form/duraform-drawer-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-form/duraform-drawer-form.component.html
@@ -1,195 +1,130 @@
-<tr
+<tbody
   class="form__order-form-group"
   appOrderForm
   [formGroup]="formGroup"
   (submit)="onSubmit()"
 >
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="quantity"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 100
-      }"
-    />
-  </td>
-  <td>
-    <app-select-menu
-      [control]="formGroup.get('duraformDrawerTypeId')"
-      [values]="duraformDrawerTypes"
-      [valueKey]="'id'"
-      [valueDisplay]="'name'"
-    ></app-select-menu>
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="height"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 2500
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="width"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 1200
-      }"
-    />
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="top" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="bottom" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="left" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="right" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="drawerOne"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: '2500'
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="drawerTwo"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: '2500'
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="drawerThree"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: '2500'
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="drawerFour"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: '2500'
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="drawerFive"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: '2500'
-      }"
-    />
-  </td>
-  <td>
-    <input
-      type="text"
-      class="form__control"
-      style="text-align: left; width: 99%;"
-      appSelectOnFocus
-      formControlName="note"
-    />
-  </td>
-  <td style="width: 5rem;">
-    <button
-      [disabled]="formGroup.invalid"
-      type="button"
-      class="btn btn--primary"
-      style="padding: 0.5rem 1rem;"
-      (click)="onSubmit()"
-    >
-      <i class="fa fa-save"></i>
-    </button>
-  </td>
-</tr>
+  <tr>
+    <app-duraform-door-basic-input
+      appRemoveTag
+      [formGroup]="formGroup"
+    ></app-duraform-door-basic-input>
+    <td>
+      <app-select-menu
+        [control]="formGroup.get('duraformDrawerTypeId')"
+        [values]="asset.duraformDrawerTypes"
+        [valueKey]="'id'"
+        [valueDisplay]="'name'"
+      ></app-select-menu>
+    </td>
+    <app-edge-profile-form-control
+      appRemoveTag
+      [formGroup]="formGroup"
+    ></app-edge-profile-form-control>
+    <td>
+      <input
+        class="form__control"
+        currencyMask
+        appSelectOnFocus
+        formControlName="drawerOne"
+        [options]="{
+          align: 'center',
+          allowZero: false,
+          precision: '0',
+          decimal: '',
+          prefix: '',
+          thousands: '',
+          max: '2500'
+        }"
+      />
+    </td>
+    <td>
+      <input
+        class="form__control"
+        currencyMask
+        appSelectOnFocus
+        formControlName="drawerTwo"
+        [options]="{
+          align: 'center',
+          allowZero: false,
+          precision: '0',
+          decimal: '',
+          prefix: '',
+          thousands: '',
+          max: '2500'
+        }"
+      />
+    </td>
+    <td>
+      <input
+        class="form__control"
+        currencyMask
+        appSelectOnFocus
+        formControlName="drawerThree"
+        [options]="{
+          align: 'center',
+          allowZero: false,
+          precision: '0',
+          decimal: '',
+          prefix: '',
+          thousands: '',
+          max: '2500'
+        }"
+      />
+    </td>
+    <td>
+      <input
+        class="form__control"
+        currencyMask
+        appSelectOnFocus
+        formControlName="drawerFour"
+        [options]="{
+          align: 'center',
+          allowZero: false,
+          precision: '0',
+          decimal: '',
+          prefix: '',
+          thousands: '',
+          max: '2500'
+        }"
+      />
+    </td>
+    <td>
+      <input
+        class="form__control"
+        currencyMask
+        appSelectOnFocus
+        formControlName="drawerFive"
+        [options]="{
+          align: 'center',
+          allowZero: false,
+          precision: '0',
+          decimal: '',
+          prefix: '',
+          thousands: '',
+          max: '2500'
+        }"
+      />
+    </td>
+    <td>
+      <input
+        type="text"
+        class="form__control"
+        style="text-align: left; width: 99%;"
+        appSelectOnFocus
+        formControlName="note"
+      />
+    </td>
+    <td style="width: 5rem;">
+      <button
+        [disabled]="formGroup.invalid"
+        type="button"
+        class="btn btn--primary"
+        style="padding: 0.5rem 1rem;"
+        (click)="onSubmit()"
+      >
+        <i class="fa fa-save"></i>
+      </button>
+    </td>
+  </tr>
+</tbody>
