--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process/duraform-process.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process/duraform-process.component.html
@@ -1,5 +1,6 @@
 <div
   class="duraform-process"
+  *ngIf="currentDisplayStep < 3"
   [ngClass]="{ 'step-two': currentDisplayStep === 2 }"
 >
   <ul>
