--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./3-component/primary-left-nav";
 @import "./3-component/dropdown";
 @import "./3-component/tab";
+@import "./3-component/panel";
 @import "./3-component/table";
 @import "./3-component/loading-panel";
 @import "./3-component/login-form";
@@ -21,6 +22,7 @@
 @import "./3-component/duraform-color-selector";
 @import "./3-component/color-card";
 @import "./3-component/duraform-order-step-two";
+@import "./3-component/duraform-order-step-three";
 @import "./3-component/edge-profile-selector";
 @import "./3-component/arch-selector";
 @import "./3-component/select-menu";
