--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/box/box.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/box/box.component.html
@@ -1,5 +1,8 @@
-<div class="box">
-  <div class="box__heading">{{ headingText }}</div>
+<div
+  class="box"
+  [ngClass]="{ scrollable: isScrollable, transparent: isTransparent }"
+>
+  <div class="box__heading" [hidden]="!showHeading">{{ headingText }}</div>
   <div class="box__content">
     <ng-content></ng-content>
   </div>
