--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
@@ -3,41 +3,51 @@
   #duraformDrawerForm
   *ngIf="isSelected"
   [duraformDrawer]="duraformDrawer"
-  [duraformDrawerTypes]="duraformDrawerTypes"
   (formSubmit)="onEdit($event)"
 ></app-duraform-drawer-form>
-<tr
+<tbody
   class="duraform-order-step-two__cart-list-item"
   [ngClass]="{ animated: !hasAnimated }"
   [hidden]="isSelected"
   (click)="onSelect()"
 >
-  <td>{{ duraformDrawer.quantity }}</td>
-  <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ duraformDrawer.duraformDrawerType.name | uppercase }}
-  </td>
-  <td>{{ duraformDrawer.height }}</td>
-  <td>{{ duraformDrawer.width }}</td>
-  <td>{{ duraformDrawer.top ? "Y" : "" }}</td>
-  <td>{{ duraformDrawer.bottom ? "Y" : "" }}</td>
-  <td>{{ duraformDrawer.left ? "Y" : "" }}</td>
-  <td>{{ duraformDrawer.right ? "Y" : "" }}</td>
-  <td>{{ duraformDrawer.drawerOne }}</td>
-  <td>{{ duraformDrawer.drawerTwo }}</td>
-  <td>{{ duraformDrawer.drawerThree }}</td>
-  <td>{{ duraformDrawer.drawerFour }}</td>
-  <td>{{ duraformDrawer.drawerFive }}</td>
-  <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ duraformDrawer.note }}
-  </td>
-  <td style="width: 5rem;">
-    <button
-      type="button"
-      class="btn btn--secondary"
-      style="padding: 0.5rem 1rem;"
-      (click)="onRemove()"
-    >
-      <i class="fa fa-trash"></i>
-    </button>
-  </td>
-</tr>
+  <tr>
+    <td>{{ duraformDrawer.quantity }}</td>
+    <td>{{ duraformDrawer.height }}</td>
+    <td>{{ duraformDrawer.width }}</td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{
+        asset.getDrawerType(duraformDrawer.duraformDrawerTypeId).name
+          | uppercase
+      }}
+    </td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{
+        asset.getEdgeProfile(duraformDrawer.duraformEdgeProfileId).name
+          | uppercase
+      }}
+    </td>
+    <td>{{ duraformDrawer.top ? "Y" : "" }}</td>
+    <td>{{ duraformDrawer.bottom ? "Y" : "" }}</td>
+    <td>{{ duraformDrawer.left ? "Y" : "" }}</td>
+    <td>{{ duraformDrawer.right ? "Y" : "" }}</td>
+    <td>{{ duraformDrawer.drawerOne }}</td>
+    <td>{{ duraformDrawer.drawerTwo }}</td>
+    <td>{{ duraformDrawer.drawerThree }}</td>
+    <td>{{ duraformDrawer.drawerFour }}</td>
+    <td>{{ duraformDrawer.drawerFive }}</td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{ duraformDrawer.note }}
+    </td>
+    <td style="width: 5rem;">
+      <button
+        type="button"
+        class="btn btn--secondary"
+        style="padding: 0.5rem 1rem;"
+        (click)="onRemove()"
+      >
+        <i class="fa fa-trash"></i>
+      </button>
+    </td>
+  </tr>
+</tbody>
