--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/1-abstract/_colors.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/1-abstract/_colors.scss
@@ -3,3 +3,6 @@ $text-default: rgba(0, 0, 0, 0.6);
 $grey-primary: #f9fafb;
 $blue-primary: #0061a0;
 $red-primary: #ec092b;
+$green-primary: #25a92a;
+$yellow-primary: #ffe500;
+$cyan-primary: #00bcd4;
