--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_box.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_box.scss
@@ -26,4 +26,25 @@ app-box {
     flex: 1;
     padding: 1rem;
   }
+
+  &.scrollable {
+    flex: 1;
+    height: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+
+    .box__content {
+      max-height: 100%;
+      overflow-y: auto;
+    }
+  }
+
+  &.transparent {
+    .box__content {
+      background-color: transparent;
+      border: none;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
 }
