--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_dropdown.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_dropdown.scss
@@ -49,7 +49,6 @@
     font-size: 1.5rem;
     list-style: none;
     min-width: max-content;
-    max-width: 30rem;
     opacity: 0;
     position: absolute;
     padding: 1rem 0;
@@ -84,6 +83,22 @@
             margin-right: 1.2rem;
           }
         }
+      }
+    }
+  }
+
+  &--1 {
+    .dropdown__toggle {
+      background-color: $red-primary;
+      border-radius: 0.5rem;
+      color: white;
+      padding: 1rem 1.5rem;
+      transition: all 0.3s ease;
+    }
+
+    &.active {
+      .dropdown__toggle {
+        background-color: #cc142f;
       }
     }
   }
