--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
@@ -39,7 +39,7 @@ app-duraform-order-step-two {
         border-bottom: none;
         border-top: none;
         font-weight: 700;
-        padding: 0.5rem 0.3rem;
+        padding: 0.5rem 0.3rem 0.3rem 0.3rem;
       }
 
       &:last-child {
@@ -63,7 +63,7 @@ app-duraform-order-step-two {
     display: block;
     font-weight: 700;
     font-size: 1.6rem;
-    min-width: 15rem;
+    min-width: 20rem;
     padding: 0.8rem;
 
     &:disabled {
