--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_table.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_table.scss
@@ -9,7 +9,11 @@
 
   th {
     color: $red-primary;
-    padding: 0.3rem 0;
+    padding: 0.3rem 0.5rem;
+  }
+
+  td {
+    padding: 0.3rem 0.5rem;
   }
 
   &--bordered {
@@ -19,6 +23,40 @@
         th,
         td {
           border: solid 1px rgba(black, 0.3);
+        }
+      }
+    }
+  }
+
+  &--component-list {
+    border: solid 1px rgba($color: black, $alpha: 0.2);
+
+    tr {
+      cursor: pointer;
+
+      td {
+        border-left: solid 1px rgba($color: black, $alpha: 0.2);
+        border-right: solid 1px rgba($color: black, $alpha: 0.2);
+      }
+
+      th {
+        border: solid 1px rgba($color: black, $alpha: 0.2);
+        color: rgba($color: black, $alpha: 0.6);
+        font-weight: 400;
+      }
+
+      td {
+        color: black;
+        font-size: 1.4rem;
+        font-weight: bold;
+        padding: 0.6rem 0.5rem;
+      }
+    }
+
+    tbody {
+      tr {
+        &:hover {
+          background-color: rgba($blue-primary, 0.1);
         }
       }
     }
