Finished hinge hole option in duraform door form

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
@@ -25,6 +25,9 @@
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
       {{ door.duraformOption?.toString() | uppercase }}
     </td>
+    <td>
+      {{ door.hingeHoleOption?.toString() }}
+    </td>
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
       {{ door.note }}
     </td>
