--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
@@ -17,6 +17,11 @@ app-duraform-order-step-two {
       margin-right: 1rem;
       min-width: 40rem;
     }
+
+    .options-box {
+      margin-right: 1rem;
+      min-width: 25rem;
+    }
   }
 
   .section-two {
