--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
@@ -197,6 +197,7 @@
   &__order-form-group &__control {
     border: solid 1px black;
     background-color: rgba(yellow, 0.2);
+    color: black !important;
     font-weight: 700;
     margin: 0 auto;
     outline-color: blue;
