--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./3-component/dropdown";
 @import "./3-component/tab";
 @import "./3-component/panel";
+@import "./3-component/hinge-hole-selector";
 @import "./3-component/table";
 @import "./3-component/loading-panel";
 @import "./3-component/login-form";
