--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-tab/duraform-door-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-tab/duraform-door-tab.component.html
@@ -18,6 +18,9 @@
         Option <br />
         (eg. No Face, Fold Back, ...)
       </th>
+      <th rowspan="2" style="width: 15rem;">
+        Hinge Hole
+      </th>
       <th rowspan="2" colspan="2">Note</th>
     </tr>
     <tr>
@@ -33,6 +36,7 @@
   ></app-duraform-door-form>
   <tbody class="table__spacer" *ngIf="order.doors.length > 0">
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
