--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_select-menu.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_select-menu.scss
@@ -2,6 +2,8 @@
   position: relative;
 
   & > input[type="text"] {
+    color: rgba($color: black, $alpha: 0.6);
+    font-weight: 700;
     text-align: left;
     width: 100%;
   }
