--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
@@ -32,6 +32,9 @@
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
       {{ pantryDoor.duraformOption?.toString() }}
     </td>
+    <td>
+      {{ pantryDoor.hingeHoleOption?.toString() }}
+    </td>
     <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
       {{ pantryDoor.note }}
     </td>
