--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
@@ -30,6 +30,9 @@
         Option <br />
         (eg. No Face, Fold Back, ...)
       </th>
+      <th rowspan="2" style="width: 15rem;">
+        Hinge Hole
+      </th>
       <th rowspan="2" colspan="2">Note</th>
     </tr>
     <tr>
@@ -45,6 +48,7 @@
   ></app-pantry-door-form>
   <tbody class="table__spacer" *ngIf="order.pantryDoors.length > 0">
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
