--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/1-abstract/_colors.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/1-abstract/_colors.scss
@@ -1,6 +1,8 @@
 $text-default: rgba(0, 0, 0, 0.6);
 
 $grey-primary: #f9fafb;
+$brown-primary: #795548;
+$orange-primary: #ff5722;
 $blue-primary: #0061a0;
 $red-primary: #ec092b;
 $green-primary: #25a92a;
