--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-three.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-three.scss
@@ -49,6 +49,8 @@ app-duraform-order-step-three {
     flex-direction: column;
     overflow-y: auto;
     width: 30rem;
+
+    @include hide-scrollbar;
   }
 
   .selection-list {
