--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -30,6 +30,7 @@
 @import "./3-component/duraform-option-selector";
 @import "./3-component/duraform-option-double-sided-form";
 @import "./3-component/duraform-option-pane-frame-form";
+@import "./3-component/badge";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
