--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-three/duraform-order-step-three.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-three/duraform-order-step-three.component.html
@@ -32,8 +32,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-1-3">
-          <div class="row">
+        <div class="col-1-3 middle">
+          <div class="row" style="width: 100%;">
             <div class="col-1-3 middle">
               <div class="dropdown dropdown--1" appDropdownBtn>
                 <button type="button" class="dropdown__toggle">
