--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/invoice-detail-form/invoice-detail-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/invoice-detail-form/invoice-detail-form.component.html
@@ -1,27 +1,53 @@
 <div class="invoice-detail-form">
   <div class="form__group sm" style="margin-top: 0.5rem;">
     <label class="form__label">Name</label>
-    <input type="text" class="form__control" />
+    <input
+      type="text"
+      class="form__control"
+      required
+      [(ngModel)]="order.invoiceTo"
+    />
   </div>
   <div class="form__group sm">
     <label class="form__label">Street Address</label>
-    <input type="text" class="form__control" />
+    <input
+      type="text"
+      class="form__control"
+      required
+      [(ngModel)]="order.invoiceAddress"
+    />
   </div>
   <div class="form__group sm">
     <label class="form__label">Suburb</label>
-    <input type="text" class="form__control" />
+    <input
+      type="text"
+      class="form__control"
+      required
+      [(ngModel)]="order.invoiceSuburb"
+    />
   </div>
   <div class="row" style="margin-top: 1.5rem;">
     <div class="col-1-2">
       <div class="form__group sm">
         <label class="form__label">State</label>
-        <input type="text" class="form__control" />
+        <app-select-menu
+          [control]="stateControl"
+          [values]="states"
+          [valueKey]="'value'"
+          [valueDisplay]="'text'"
+          (afterSet)="onSelectState()"
+        ></app-select-menu>
       </div>
     </div>
     <div class="col-1-2">
       <div class="form__group sm">
         <label class="form__label">Postcode</label>
-        <input type="text" class="form__control" />
+        <input
+          type="text"
+          class="form__control"
+          required
+          [(ngModel)]="order.invoicePostcode"
+        />
       </div>
     </div>
   </div>
