--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_primary-left-nav.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_primary-left-nav.scss
@@ -58,6 +58,18 @@
         &__icon {
           font-size: 2rem;
           transform: translateY(-0.3rem);
+
+          &.blue {
+            color: $blue-primary;
+          }
+
+          &.brown {
+            color: $brown-primary;
+          }
+
+          &.orange {
+            color: $orange-primary;
+          }
         }
 
         &__text {
@@ -71,16 +83,57 @@
           list-style: none;
           max-height: 0;
           opacity: 0;
+          padding-top: 1.2rem;
           transition: all 0.5s ease;
 
           & > li {
-            &:first-child {
-              padding-top: 1.2rem;
+            position: relative;
+
+            &::before,
+            &::after {
+              background-color: $text-default;
+              content: "";
+              display: inline-block;
+              position: absolute;
+            }
+
+            &::before {
+              height: 100%;
+              left: -1.5rem;
+              top: 0;
+              width: 1px;
+            }
+
+            &::after {
+              height: 1px;
+              left: -1.5rem;
+              top: 50%;
+              transform: translateY(-50%);
+              width: 1rem;
             }
 
             & > a {
               display: block;
               padding: 1.2rem 0;
+              position: relative;
+              text-decoration: none;
+
+              .badge {
+                position: absolute;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+              }
+
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+
+            &:last-child {
+              &::before {
+                height: 50%;
+              }
             }
           }
         }
@@ -112,6 +165,7 @@
 
           &__text {
             opacity: 0;
+            position: absolute;
           }
         }
       }
