--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -36,6 +36,8 @@
 @import "./3-component/component-list";
 @import "./3-component/cabinet-maker-form";
 @import "./3-component/float-box";
+@import "./3-component/delivery-docket";
+@import "./3-component/pdf-viewer";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
