--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-three.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-three.scss
@@ -21,15 +21,7 @@ app-duraform-order-step-three {
     &__action-center {
       border: solid 1px rgba(black, 0.1);
       background-color: white;
-      margin-top: 1rem;
       padding: 1rem 0;
-
-      .action-divider {
-        background-color: rgba(black, 0.1);
-        height: 1px;
-        margin: 1rem 0;
-        width: 100%;
-      }
 
       .action-btn {
         border: none;
@@ -57,6 +49,10 @@ app-duraform-order-step-three {
             background-color: rgba($color: black, $alpha: 0.1);
           }
         }
+      }
+
+      &:not(:first-child) {
+        border-top: none;
       }
     }
   }
