--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_float-box.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_float-box.scss
@@ -7,12 +7,12 @@
   justify-content: center;
   left: 0;
   position: fixed;
+  padding: 20rem;
   top: 0;
   width: 100vw;
   z-index: 99999;
 
   .container {
     animation: moveInTop 0.3s ease-out;
-    margin-top: -40rem;
   }
 }
