--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -41,6 +41,7 @@
 @import "./3-component/duraform-order-list-page";
 @import "./3-component/pagination";
 @import "./3-component/heading";
+@import "./3-component/cabinet-maker-list";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
