--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/cabinet-maker-list-page/cabinet-maker-list-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/cabinet-maker-list-page/cabinet-maker-list-page.component.html
@@ -6,38 +6,10 @@
     (closeForm)="showCabinetMakerForm = false"
   ></app-cabinet-maker-form>
   <app-simple-box [heading]="'Customer List'">
-    <div style="margin-bottom: 2rem;">
-      <button
-        type="button"
-        class="btn btn--primary"
-        (click)="onAddingNewCabinetMaker()"
-      >
-        <i class="fa fa-plus"></i>
-        Add New Customer
-      </button>
-    </div>
-    <table class="table table--hovered left">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Email</th>
-          <th>Invoice Address</th>
-          <th>Delivery Address</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr
-          *ngFor="let maker of cabinetMakerList"
-          (click)="onSelectCabinetMaker(maker)"
-        >
-          <td>{{ maker.name }}</td>
-          <td>{{ maker.email }}</td>
-          <td>{{ maker.invoiceDetails }}</td>
-          <td>{{ maker.deliveryDetails }}</td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
+    <app-cabinet-maker-list
+      #cabinetMakerList
+      (addNewClick)="onAddNewClick()"
+      (itemClick)="onSelectMaker($event)"
+    ></app-cabinet-maker-list>
   </app-simple-box>
 </div>
